# vc6-sys

./: .gitignore  Cargo.toml  README.md  bindgen.sh  bindings.h  build.rs  i386-pc-win9x-lld.json  make-extra.sh
.cargo/: config.toml
sdk/include/: excpt.h  winnt.h
sdk/lib/: vc6-sys-extra.lib
src/: lib.rs
