[package]
name = "vc6-sys"
version = "0.1.1"
description = "Rust bindings for Visual C++ 6 SDK"
edition = "2021"
repository = "https://github.com/haileys/vc6-sys"
license = "MIT"

include = [
    "sdk",
    "src",
    "build.rs",
    "README.md",
]

[dependencies]
# For more information on these dependencies see rust-lang/rust's
# `src/tools/rustc-std-workspace` folder
core = { version = '1.0.0', optional = true, package = 'rustc-std-workspace-core' }
compiler_builtins = { version = '0.1.0', optional = true }

[features]
rustc-dep-of-std = ['core', 'compiler_builtins/rustc-dep-of-std']
